--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="modal" id="modal"> </div>
+    <script src="leader-line.min.js"></script>
     <script src="app.js"></script>
     <script src="ui.js"></script>
 
