--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Kraph</title>
+    <link rel="icon" href="/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="style.css">
 </head>
 
