--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
     <div class="modal" id="modal"> </div>
-    <script src="leader-line.min.js"></script>
+    <script src="pkg/leader-line.min.js"></script>
     <script src="app.js"></script>
-    <script src="ui.js"></script>
+    <script src="pkg/globals.js"></script>
+    <script src="pkg/utils.js"></script>
+    <script src="pkg/events.js"></script>
+    <script src="pkg/listeners.js"></script>
 </body>
 
 </html>
