--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="modal" id="modal"> </div>
+    <div class="invDiv" id="invDiv"> </div>
     <script src="pkg/leader-line.min.js"></script>
     <script src="app.js"></script>
     <script src="pkg/globals.js"></script>
