--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="modal" id="modal"> </div>
     <div class="invDiv" id="invDiv"> </div>
-    <script src="pkg/leader-line.min.js"></script>
+    <script src="js/leader-line.min.js"></script>
     <script src="app.js"></script>
-    <script src="pkg/globals.js"></script>
-    <script src="pkg/utils.js"></script>
-    <script src="pkg/events.js"></script>
-    <script src="pkg/listeners.js"></script>
+    <script src="js/globals.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/actions.js"></script>
+    <script src="js/listeners.js"></script>
 </body>
 
 </html>
