--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
 </head>
 
 <body>
+    <svg id="svgContainer" width="2000" height="2000" style="position: absolute; z-index: 0;">
+        <defs>
+            <marker id="arrow" markerWidth="6" markerHeight="7" refX="5" refY="3" orient="auto"
+                markerUnits="strokeWidth">
+                <path d="M0,0 L6,3 L0,6 L2,3 z" fill="orange"></path>
+            </marker>
+        </defs>
+        <!-- Other SVG elements can be added dynamically here -->
+    </svg>
     <div class="modal" id="modal"> </div>
     <div class="invDiv" id="invDiv"> </div>
     <script src="js/leader-line.min.js"></script>
     <script src="app.js"></script>
     <script src="js/globals.js"></script>
+    <script src="js/geom.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/actions.js"></script>
     <script src="js/listeners.js"></script>
+    <script src="js/tests.js"></script>
 </body>
 
 </html>
