everything except editing nodes and edges

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body>
     <svg id="svgContainer" width="0" height="0" style="position: absolute; z-index: 0;">
         <defs>
-            <marker id="arrow" markerWidth="6" markerHeight="7" refX="5" refY="3" orient="auto"
+            <marker id="arrowEnd" markerWidth="6" markerHeight="7" refX="5" refY="3" orient="auto"
                 markerUnits="strokeWidth">
                 <path d="M0,0 L6,3 L0,6 L2,3 z" fill="orange"></path>
+            </marker>
+            <marker id="arrowStart" markerWidth="6" markerHeight="7" refX="1" refY="3" orient="auto"
+                markerUnits="strokeWidth">
+                <path d="M6,0 L0,3 L6,6 L4,3 z" fill="orange"></path>
             </marker>
         </defs>
         <!-- Other SVG elements can be added dynamically here -->
