--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </svg>
 
     <button id="infoButton">Info</button>
+    <button id="saveButton">Save</button>
+    <button id="loadButton">Load</button>
+    <button id="downloadButton">Download</button>
+    <button id="uploadButton">Upload</button>
     <div id="infoMenu" class="modal">
         <!-- Static lines of text here -->
         <p>How to use Kraph:</p>
@@ -38,10 +42,6 @@
             <li>left or right arrows when edges are selected: toggle plugs on and off </li>
             <!-- Add more steps as needed -->
         </ul>
-        <button id="saveButton">Save locally</button>
-        <button id="loadButton">Load locally</button>
-        <button id="downloadButton">Save to file (yaml)</button>
-        <button id="uploadButton">Load from file (yaml)</button>
     </div>
 
     <div class="modal" id="editDataForm"> </div>
