upload/download done!

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- Other SVG elements can be added dynamically here -->
     </svg>
 
+    <input type="file" id="uploadInput" style="display: none;">
     <button id="infoButton">Info</button>
     <button id="saveButton">Save</button>
     <button id="loadButton">Load</button>
